--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -54,6 +54,7 @@ body {
 	padding: 0px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 600;
+	text-decoration: none;
 }
 .text-primary {
 	color:#FC8817
