--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -125,6 +125,10 @@ sub {
 .content-block:hover {
 	box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 17px 0px;
 }
+.content-block img {
+	max-width: 100%;
+	height: 100%;
+}
 
 .block-overflow {
 	overflow: hidden;
@@ -362,7 +366,9 @@ sub {
 	text-align: center;
 	max-height: 100%;
 }
-
+.modal-img img {
+	width: 100%;
+}
 
 @media(max-width: 1200px) {
 	.app-container {
@@ -384,5 +390,11 @@ sub {
 		width: 100%;
 		float: none !important;
 		display: block;
+	}
+	.modal {
+		overflow: scroll;
+	}
+	.modal-box {
+		top: 70%;
 	}
 }
