--- a/src/css/appStyles.css
+++ b/src/css/appStyles.css
@@ -337,6 +337,7 @@ sub {
 }
 .modal-box {
 	position: absolute;
+	max-height: 350px;
 	z-index: 999;
 	top:50%;
 	left:50%;
@@ -379,6 +380,19 @@ sub {
 	.sm-block-6 {
 		width: 50%;
 	}
+	.modal {
+		overflow: scroll;
+	}
+	.modal-box {
+		top: 0px;
+    	-webkit-transform: translate(-50%, 5%);
+    	   -moz-transform: translate(-50%, 5%);
+    	    -ms-transform: translate(-50%, 5%);
+    	     -o-transform: translate(-50%, 5%);
+    	        transform: translate(-50%, 5%);
+    	max-height: 350px;
+    	overflow-y: scroll;
+	}
 }
 @media(max-width: 767px) {
 	.modal-box {
@@ -390,11 +404,5 @@ sub {
 		width: 100%;
 		float: none !important;
 		display: block;
-	}
-	.modal {
-		overflow: scroll;
-	}
-	.modal-box {
-		top: 70%;
 	}
 }
