--- a/src/css/appStyles.css
+++ b/src/css/appStyles.css
@@ -79,6 +79,9 @@ body {
 .text-xs {
 	font-size: 0.8em;
 }
+.text-bold {
+	font-weight: bold;
+}
 .m-bottom-20 {
 	margin-bottom: 20px !important;
 }
@@ -87,6 +90,12 @@ body {
 }
 .m-top-10 {
 	margin-top: 10px !important;
+}
+.m-top-20 {
+	margin-top: 20px !important;
+}
+.m-top-30 {
+	margin-top: 30px !important;
 }
 .badge {
 	position: absolute;
